--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </nav>
         <div class="hero-head">
             <div class="container">
-                <center><img class="avatar" src="/img/me.jpg"></center>
+                <center><img class="avatar" src="/img/me.jpeg"></center>
             </div>
         </div>
 
