--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AfaqueJaya JH | Computer Science</title>
     <meta name="description" content="Personal Website of Afaque Jaya, Computer Science Engineering Student, Developer" />
-    <meta name="keywords" content="Ganeshan NT, ganeshannt,python ,django developer, Personal, Website, Resume, CV,Paavai engineering college, Computer Science, Engineer" />
-    <meta name="author" content="ganeshannt" />
+    <meta name="keywords" content="afaquejaya , afaquejaya,java ,c# developer, Personal, Website, Resume, CV,B.A.College of engineering & Technology, Computer Science, Engineer" />
+    <meta name="author" content="afaquejaya" />
     <link rel="shortcut icon" href="me.ico">
     <link rel="icon" href="me.ico" type="image/x-icon">
     <!-- CSS -->
@@ -97,9 +97,9 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title">
-                                    <span>Knowledge Replica</span>
+                                    <span>Face Detection</span>
                                     <span class="is-pulled-right">
-                                        <span class="tag is-warning">DJANGO</span>
+                                        <span class="tag is-warning">JAVA</span>
                                     </span>
                                 </p>
                             </header>
@@ -108,21 +108,21 @@
                                     <img src="img/portfolio/gallery1.png">
                                 </figure>
                                 <div style="margin-top:1em" class="content">
-                                    The project aim is to deliver the content management system to the user. It is Django based CMS
+                                    The project aim is to deliver the Face description to the user. Eg:Gender,Age,Smile,Facial Hair etc
                                 </div>
                                 <div class="field is-grouped-multiline">
                                     <div class="control">
                                         <div class="tags">
                                             <a class="tag is-primary">blog Project</a>
-                                            <a class="tag is-danger">VS Code</a>
-                                            <a class="tag is-warning">2018</a>
-                                            <a class="tag is-success">CMS</a>
+                                            <a class="tag is-danger">Android Studio</a>
+                                            <a class="tag is-warning">2020</a>
+                                            <a class="tag is-success">API</a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <footer class="card-footer">
-                                <a href="https://github.com/GaneshanNT/Knowledge-Replica" class="card-footer-item">
+                                <a href="https://afaquejaya.github.io/" class="card-footer-item">
                                     <span class="icon">
                                         <i class="fab fa-github"> </i>
                                     </span>
@@ -136,9 +136,10 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title">
-                                    <span>Livable Places</span>
+                                    <span>Social Media App</span>
                                     <span class="is-pulled-right">
-                                        <span class="tag is-success">DJANGO</span>
+                                        <span class="tag is-success">Java</span>
+										 <span class="tag is-warning">PHP</span>
                                     </span>
                                 </p>
                             </header>
@@ -147,20 +148,20 @@
                                     <img src="img/portfolio/gallery2.png" alt="If you played for screenshot">
                                 </figure>
                                 <div style="margin-top:1em" class="content">
-                                    Livable Places is a Real Estate website
+                                    This Project Just like Social Media ,For Uploading Image, sending friend Request,Like,Comment etc.
                                 </div>
                                 <div class="field is-grouped-multiline">
                                     <div class="control">
                                         <div class="tags">
                                             <a class="tag is-primary">For Learning</a>
-                                            <a class="tag is-danger">VS Code</a>
-                                            <a class="tag is-warning">2018</a>
+                                            <a class="tag is-danger">Android Studio</a>
+                                            <a class="tag is-warning">2019</a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <footer class="card-footer">
-                                <a href="https://github.com/GaneshanNT/Liveable-Place" class="card-footer-item">
+                                <a href="https://afaquejaya.github.io/" class="card-footer-item">
                                     <span class="icon">
                                         <i class="fab fa-github"> </i>
                                     </span>
@@ -169,49 +170,7 @@
                             </footer>
                         </div>
                     </div>
-                    <div class="column">
-                        <!-- ICATS'2018 -->
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title">
-                                    <span>ICATS'2018 </span>
-                                    <span class="is-pulled-right">
-                                        <span class="tag is-warning">HTML</span>
-                                        <span class="tag is-dark">CSS</span>
-                                    </span>
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <figure class="image">
-                                    <img src="img/portfolio/gallery3.png" alt="Cart'ZZ screenshot">
-                                </figure>
-                                <div style="margin-top:1em" class="content">
-                                    ICATS - International Conference on Adaptive Technologies for Sustainable Growth.I build a website for ICATS 2018 event
-                                </div>
-                                <div class="field is-grouped-multiline">
-                                    <div class="control">
-                                        <div class="tags">
-                                            <a class="tag is-success">Conference Project</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <footer class="card-footer">
-                                <a href="http://pec.paavai.edu.in/icats18/" class="card-footer-item">
-                                    <span class="icon">
-                                        <i class="fa fa-eye"> </i>
-                                    </span>
-                                    Preview
-                                </a>
-                                <a href="" class="card-footer-item">
-                                    <span class="icon">
-                                        <i class="fab fa-github"> </i>
-                                    </span>
-                                    Source Code
-                                </a>
-                            </footer>
-                        </div>
-                    </div>
+                   
                     <div class="column">
                         <!-- Techfinix'18 -->
                         <div class="card">
@@ -230,7 +189,7 @@
                                     <img src="img/portfolio/gallery4.png" alt="OUM Zarabi screenshot">
                                 </figure>
                                 <div style="margin-top:1em" class="content">
-                                    Techfinix18 -National level Technical Symposium Website.PHP used for backend development
+                                    Techfinix18 -PHP used for backend development
                                 </div>
                                 <div class="field is-grouped-multiline">
                                     <div class="control">
@@ -241,7 +200,7 @@
                                 </div>
                             </div>
                             <footer class="card-footer">
-                                <a href="https://github.com/GaneshanNT/Techfinix18" class="card-footer-item">
+                                <a href="https://afaquejaya.github.io/" class="card-footer-item">
                                     <span class="icon">
                                         <i class="fab fa-github"> </i>
                                     </span>
@@ -259,9 +218,9 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title">
-                                    <span>India Frame</span>
+                                    <span>Google Login</span>
                                     <span class="is-pulled-right">
-                                        <span class="tag is-warning">Android</span>
+                                        <span class="tag is-warning">Java</span>
                                     </span>
                                 </p>
                             </header>
@@ -270,19 +229,19 @@
                                     <img src="img/portfolio/gallery6.png">
                                 </figure>
                                 <div style="margin-top:1em" class="content">
-                                    Smart India Hackathon 2018 Project
+                                    Smart Google-Login App 2017 Project
                                 </div>
                                 <div class="field is-grouped-multiline">
                                     <div class="control">
                                         <div class="tags">
-                                            <a class="tag is-success">SIH Project</a>
-                                            <a class="tag is-info">Android</a>
+                                            <a class="tag is-success">Learning Project</a>
+                                            <a class="tag is-info">Android Studio</a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <footer class="card-footer">
-                                <a href="https://github.com/GaneshanNT/India-Frame" class="card-footer-item">
+                                <a href="https://afaquejaya.github.io/" class="card-footer-item">
                                     <span class="icon">
                                         <i class="fab fa-github"> </i>
                                     </span>
@@ -296,31 +255,32 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title">
-                                    <span>ReturnMyStuff</span>
+                                    <span>Web View App</span>
                                     <span class="is-pulled-right">
-                                        <span class="tag is-success">DJANGO</span>
+                                        <span class="tag is-success">C#</span>
                                     </span>
                                 </p>
                             </header>
                             <div class="card-content">
                                 <figure class="image">
-                                    <img src="img/portfolio/gallery7.png" alt="OUM LILA screenshot">
+                                    <img src="img/portfolio/gallery7.png" >
                                 </figure>
                                 <div style="margin-top:1em" class="content">
-                                    ReturnMyStuff is a web application to provide the communication between the person who lost the item and the one who find it.
+                                    Web App is a web application to provide the communication between the person who lost the item and the one who find it.
                                     <br>
                                     <br>
                                 </div>
                                 <div class="field is-grouped-multiline">
                                     <div class="control">
                                         <div class="tags">
-                                            <a class="tag is-primary">Social Project</a>
+                                            <a class="tag is-primary">Visual Studio</a>
+											  <a class="tag is-info">XAMARIN</a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <footer class="card-footer">
-                                <a href="https://github.com/GaneshanNT/ReturnMyStuff" class="card-footer-item">
+                                <a href="https://afaquejaya.github.io/" class="card-footer-item">
                                     <span class="icon">
                                         <i class="fab fa-github"> </i>
                                     </span>
@@ -360,13 +320,13 @@
                                 </div>
                             </div>
                             <footer class="card-footer">
-                                <a href="ganeshannt.github.io/" class="card-footer-item">
+                                <a href="https://afaquejaya.github.io/" class="card-footer-item">
                                     <span class="icon">
                                         <i class="fa fa-eye"> </i>
                                     </span>
                                     Preview
                                 </a>
-                                <a href="https://github.com/GaneshanNT/ganeshannt.github.io/" class="card-footer-item">
+                                <a href="https://github.com/Afaquejaya/afaquejaya.github.io" class="card-footer-item">
                                     <span class="icon">
                                         <i class="fab fa-github"> </i>
                                     </span>
@@ -413,15 +373,15 @@
     <footer class="footer has-background-white">
         <div class="content has-text-centered has-text-dark">
             <p>
-                <a style="padding-right: 0.5em " href="https://www.linkedin.com/in/ganeshannt/ ">
+                <a style="padding-right: 0.5em " href="https://www.linkedin.com/in/afaque-jaya-5b6311134 ">
                     <i class="fab fa-linkedin-in fa-2x "></i>
                 </a>
-                <a style="padding-right: 0.5em " href="https://github.com/ganeshannt ">
+                <a style="padding-right: 0.5em " href="https://github.com/Afaquejaya ">
                     <i class="fab fa-github fa-2x "></i>
                 </a>
             </p>
             <p>
-                Copyrights © <a target="_blank" href="index.html">Afaque</a> 2019 |
+                Copyrights © <a target="_blank" href="index.html">Afaque</a> 2020 |
                 Made with <i class="em em-yellow_heart"></i>
                 in Jharkhand
             </p>
