--- a/cv/cv.html
+++ b/cv/cv.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Ganeshan NT Web Resume</title>
+    <title>Afaque Jay  Web Resume</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,10 +34,9 @@
                 	<br><br>
                    <li class="email"><i class="fa fa-envelope"></i><a href="mailto: saifulcseng@gmail.com">afaquejaya123@gmail.com</a></li>
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/afaque-jaya-5b6311134" target="_blank">linkedin.com/in/afaquejaya/</a></li>
-                    <!--<li class="github"><i class="fa fa-github"></i><a href="http://www.github.com/imsaiful" target="_blank">github.com/GaneshanNT</a></li>-->
                     <li class="github"><i class="fa fa-github"></i><a href="https://github.com/Afaquejaya?tab=repositories" target="_blank">github.com/Afaquejaya</a></li>
-                    <li class="stack-overflow"><i class="fa fa-stack-overflow"></i><a href="https://askubuntu.com/users/924140/ganeshan-nt" target="_blank">Ask-Ubuntu : ganeshannt</a></li>
-                    <li class="stack-overflow"><i class="fa fa-code"></i><a href="https://www.hackerrank.com/ganeshannt" target="_blank">hackerrank.com/ganeshannt</a></li>
+                    <li class="stack-overflow"><i class="fa fa-stack-overflow"></i><a href="https://afaquejaya.github.io/" target="_blank">Ask-Ubuntu : Afaquejaya</a></li>
+                    <li class="stack-overflow"><i class="fa fa-code"></i><a href="https://www.hackerrank.com/afaquejaya123/" target="_blank">hackerrank.com/Afaquejayaa></li>
               </ul>
             </div><!--//contact-container-->
             <div class="education-container container-block">
@@ -51,7 +50,7 @@
                 <div class="item">
                     <h4 class="degree">I.Sc, Jharkhand</h4>
                     <h5 class="meta">Xavier's Inter College,Chaibasa</h5>
-                    <h5 class="meta">69 %</h5>
+                    <h5 class="meta">59 %</h5>
                     <div class="time">2015</div>
                 </div><!--//item-->
                 <div class="item">
@@ -97,41 +96,49 @@
             <section class="section projects-section">
                 <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
                 <div class="item">
-                    <span class="project-title job-title"><a href="#hook">Knowledge Replica</a></span>
+                    <span class="project-title job-title"><a href="#hook">Face Detection</a></span>
                     <div class="justify">
-                        The project aim is to deliver the content management system to the user. It is Django based CMS and user can do CRUD (create, read, update, delete) operations on their content. User can share their knowledge with the world through this web app. I believe sharing always caring
+                                    The project aim is to deliver the Face description to the user. Eg:Gender,Age,Smile,Facial Hair etc
                     <div class="item">
-                            <div class="row"><div class="col-md-3"><b><h6>Technology Used:</h6></b></div><div class="col-md-9"><h6>Python,Django,Bootsrap,SQLite</h6></div></div>
-                            <div class="row"><div class="col-md-3"><b><h6>Link:</h6></b></div><div class="col-md-9"><h6><a href="https://github.com/GaneshanNT/Knowledge-Replica">https://github.com/GaneshanNT/Knowledge-Replica</a></h6></div></div>
+                            <div class="row"><div class="col-md-3"><b><h6>Technology Used:</h6></b></div><div class="col-md-9"><h6>Java,XML,Microsoft Face API,SQLite</h6></div></div>
+                            <div class="row"><div class="col-md-3"><b><h6>Link:</h6></b></div><div class="col-md-9"><h6><a href="https://afaquejaya.github.io/">"https://afaquejaya.github.io/"</a></h6></div></div>
 
                         </div>
                     </div>
 
                 </div><!--//item-->
                 <div class="item">
-                    <span class="project-title job-title"><a href="https://github.com/GaneshanNT/Liveable-Place" target="_blank">Livable Places</a></span>
+                    <span class="project-title job-title"><a href="https://afaquejaya.github.io/" target="_blank">Social Media App</a></span>
                     <div class="justify">
-                            Livable Places is a Real Estate website where a realtor can add the places to sell and customers can find suitable places to live. Django admin panel provides the functionality to restrict the Realtors access permissions
-                        <div class="row"><div class="col-md-3"><b><h6>Technology Used:</h6></b></div><div class="col-md-9"><h6>Python,Django,Bootsrap,Postgres SQL,HTML,CSS</h6></div></div>
-                        <div class="row"><div class="col-md-3"><b><h6>Link:</h6></b></div><div class="col-md-9"><h6><a href="https://github.com/GaneshanNT/Liveable-Plac">https://github.com/GaneshanNT/Liveable-Place</a></h6></div></div>
+                            This app is just like social media,for photo sharing ,sending friend request ,like ,comment etc.
+                        <div class="row"><div class="col-md-3"><b><h6>Technology Used:</h6></b></div><div class="col-md-9"><h6>Java,xml,Android Studio,Xampp Server,MS SQL (PHP My Admin)</h6></div></div>
+                        <div class="row"><div class="col-md-3"><b><h6>Link:</h6></b></div><div class="col-md-9"><h6><a href="https://afaquejaya.github.io/">https://afaquejaya.github.io/</a></h6></div></div>
                     </div>
                 </div>
                 <div class="item">
-                    <span class="project-title job-title"><a href="http://pec.paavai.edu.in/icats18/" target="_blank">ICATS'2018 - Conference Website</a></span>
+                    <span class="project-title job-title"><a href="https://afaquejaya.github.io/" target="_blank">Web App</a></span>
                     <div class="justify">
-                        ICATS - International Conference on Adaptive Technologies for Sustainable Growth.I build a website for ICATS 2018 event
-                        <div class="row"><div class="col-md-3"><b><h6>Technology Used:</h6></b></div><div class="col-md-9"><h6>HTML,CSS,Javascript</h6></div></div>
-                        <div class="row"><div class="col-md-3"><b><h6>Link:</h6></b></div><div class="col-md-9"><h6><a href="http://pec.paavai.edu.in/icats18/">http://pec.paavai.edu.in/icats18/</a></h6></div></div>
+					This App worked as web view app can browse any thing in it ,just like chrome,UC.
+                        <div class="row"><div class="col-md-3"><b><h6>Technology Used:</h6></b></div><div class="col-md-9"><h6>C#,XAML,Xamarin,(Visual Studio)</h6></div></div>
+                        <div class="row"><div class="col-md-3"><b><h6>Link:</h6></b></div><div class="col-md-9"><h6><a href="https://afaquejaya.github.io/">https://afaquejaya.github.io/</a></h6></div></div>
+                    </div>
+                </div>
+
+					<div class="item">
+                    <span class="project-title job-title"><a href="https://afaquejaya.github.io/" target="_blank">Chat Bot</a></span>
+                    <div class="justify">
+					This chat bot i devloped by using IBM BlueMix,in which user can book a table in restaurant with full details.
+                        <div class="row"><div class="col-md-3"><b><h6>Technology Used:</h6></b></div><div class="col-md-9"><h6>IBM BlueMix</h6></div></div>
+                        <div class="row"><div class="col-md-3"><b><h6>Link:</h6></b></div><div class="col-md-9"><h6><a href="https://afaquejaya.github.io/">https://afaquejaya.github.io/</a></h6></div></div>
                     </div>
                 </div>
 
                 <!--//item-->
                  <div class="item">
-                    <span class="project-title job-title"><a href="https://github.com/GaneshanNT/Techfinix18" target="_blank">Techfinix'18</a></span>
+                    <span class="project-title job-title"><a href="https://afaquejaya.github.io/" target="_blank">IOT Project Using Google Assistant</a></span>
                     <div class="justify">
-                       Techfinix18 -National level Technical Symposium Website.PHP used for backend development
-                       <div class="row"><div class="col-md-3"><b><h6>Technology Used:</h6></b></div><div class="col-md-9"><h6>HTML,CSS,PHP</h6></div><div class="col-md-9"><h6></h6></div></div>
-                       <div class="row"><div class="col-md-3"><b><h6>Link:</h6></b></div><div class="col-md-9"><h6><a href="https://github.com/GaneshanNT/Techfinix18">https://github.com/GaneshanNT/Techfinix18</a></h6></div></div>
+                       Devloped IOT kit through which we can control home appliances just by giving commang throug voice.(used Google Home Mini)
+                       <div class="row"><div class="col-md-3"><b><h6>Technology/Hardware Used:</h6></b></div><div class="col-md-9"><h6>Wifi module,Relay</h6></div><div class="col-md-9"><h6></h6></div></div>
                     </div>
                 </div>
             </section><!--//section-->
@@ -141,28 +148,17 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Volunteer</h3>
-                            <div class="time">Jun 2015 - Still now </div>
+                            <h3 class="job-title">Co-Ordinator</h3>
+                            <div class="time">Jun 2018 </div>
                         </div><!--//upper-row-->
-                        <div class="company">Free Software Foundation, Tamil Nadu</div>
+                        <div class="company">OISTOS</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p class="justify">Organized many events and workshops for spreading awareness about Free and Open Source Software among Students and I had Taken session in three different schools in Tamil Nadu about basic computer stuff.Volunteered and Mentored various teams and individuals at many technical events and workshops.
+                        <p class="justify">Organized  event and workshop for spreading awareness about Free and Open Source Software among Students.Volunteered and Mentored various teams and individuals at many technical events and workshops.
                     </div><!--//details-->
                 </div><!--//item-->
 
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">Core Member</h3>
-                            <div class="time">Aug 2016 - May 2018</div>
-                        </div><!--//upper-row-->
-                        <div class="company">GNU Linux users group(GLUG), Paavai institutions</div>
-                    </div><!--//meta-->
-                    <div class="details">
-                        <p class="justify">I'm part of GLUG core member team who initiated the club to spread the open source technologies and sharing the knowledge via evening meetups and weekend sessions. I gave the guest lecture at Dhirajlal Gandhi College of Technology. I had taken session in Three different schools in Tamil Nadu about basic computer stuff</p>
-                    </div><!--//details-->
-                </div><!--//item-->
+              
 
             </section><!--//section-->
 
@@ -170,22 +166,22 @@
                 <h2 class="section-title"><i class="fa fa-rocket"></i>Skills &amp; Proficiency</h2>
                 <div class="skillset" style="margin-left:40px;">
                     <div class="item">
-                        <div class="row"><div class="col-md-4"><b>Languages</b></div><div class="col-md-8">C++, Python</div></div>
+                        <div class="row"><div class="col-md-4"><b>Languages</b></div><div class="col-md-8">C++, Java,c#,php(Basic)</div></div>
                     </div><!--//item-->
                     <div class="item">
-                        <div class="row"><div class="col-md-4"><b>Backend</b></div><div class="col-md-8">Django</div></div>
+                        <div class="row"><div class="col-md-4"><b>Database</b></div><div class="col-md-8">MS SQL Server,SQLite,My Sql</div></div>
                     </div><!--//item-->
                     <div class="item">
-                        <div class="row"><div class="col-md-4"><b>Frontend</b></div><div class="col-md-8">HTML,CSS,Bootstrap</div></div>
+                        <div class="row"><div class="col-md-4"><b>Frontend</b></div><div class="col-md-8">HTML,XML,XAML,Bootstrap</div></div>
                     </div><!--//item-->
                     <div class="item">
-                        <div class="row"><div class="col-md-4"><b>Cloud</b></div><div class="col-md-8">Heroku,AWS</div></div>
+                        <div class="row"><div class="col-md-4"><b>Cloud</b></div><div class="col-md-8">AWS</div></div>
                     </div><!--//item-->
                     <div class="item">
                         <div class="row"><div class="col-md-4"><b>VCS</b></div><div class="col-md-8">Git</div></div>
                     </div><!--//item-->
                      <div class="item">
-                        <div class="row"><div class="col-md-4"><b>Others</b></div><div class="col-md-8">Scrapy(Beginner),<br>Android(Beginner)</div></div>
+                        <div class="row"><div class="col-md-4"><b>Software</b></div><div class="col-md-8">Xamarin(Visual Studio)<br>Android Studio</div></div>
                     </div><!--//item-->
                 </div>
 
@@ -198,7 +194,7 @@
                         <li>
                             <div class="item">
                                 <div class="justify">
-                                    I got the <strong>Most Valuable Professional award</strong> for knowledge sharing and community contributions from the c# corner community in the year of 2017.
+                                    I got the <strong>3rd Prize</strong> in Autonomus Robotic Competition 2017 ,organised by NIT Jamshedpur.
                                 </div>
                             </div><!--//item-->
                         </li>
@@ -208,7 +204,7 @@
                         <li>
                             <div class="item">
                                 <div class="justify">
-                                    I got the <strong>third mark</strong> in SSLC at Government higher secondary school.
+                                    I got the <strong>best logo designer</strong> in our college Tech fest.
                                 </div>
                             </div><!--//item-->
                         </li>
@@ -223,7 +219,7 @@
                         <li>
                             <div class="item">
                                 <div class="justify">
-                                    I have passed in <strong>BRITISH ENGLISH CERTIFICATION COURSE</strong>
+                                     <strong>C++ Programming</strong>
                                 </div>
                             </div><!--//item-->
                         </li>
@@ -233,7 +229,7 @@
                         <li>
                             <div class="item">
                                 <div class="justify">
-                                    Have completed <strong>Basic graph algorithm in Quality enhancement engineering in education(QEEE)</strong> IIT Delhi Online Courses
+                                    Best<strong>Logo Designer</strong> 
                                 </div>
                             </div><!--//item-->
                         </li>
@@ -248,8 +244,7 @@
                         <li>
                             <div class="item">
                                 <div class="justify">
-                                  Secured 1st Place in <strong> PAPER PRESENTATION </strong> in National Level Symposium held at Adhiyamaan College of engineering
-                                  Secured 1st Place in HACKERZ in National Level Symposium held at Chennai Institute of Technology (CIT)
+                                  Secured 2nd Place in <strong> Art & Painting competition </strong> .
                                 </div>
                             </div><!--//item-->
                         </li>
@@ -259,52 +254,7 @@
                         <li>
                             <div class="item">
                                 <div class="justify">
-                                    Secured 1st Place in <strong> WEB DESIGN  </strong>in National Level Symposium held at ST. Peter’s college of engineering and technology and Nandha College of technology
-                                </div>
-                            </div><!--//item-->
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <div class="item">
-                                <div class="justify">
-                                  Secured 1st Place in <strong> HACKERZ </strong> in National Level Symposium held at Chennai Institute of Technology (CIT)
-                                </div>
-                            </div><!--//item-->
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <div class="item">
-                                <div class="justify">
-                                  My team was selected for final round in <strong> Smart India Hackathon 2018 </strong>
-                                </div>
-                            </div><!--//item-->
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <div class="item">
-                                <div class="justify">
-                                    I gave the <strong>guest lecture</strong> in Dhirajlal Gandhi College of Technology and Paavai Engineering College about Open source software.
-                                  </div>
-                            </div><!--//item-->
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <div class="item">
-                                <div class="justify">
-                                    I had Taken session in Three different schools in Tamil Nadu about basic computer stuff
-                                  </div>
-                            </div><!--//item-->
-                        </li>
-                    </ul>
-                    <ul>
-                        <li>
-                            <div class="item">
-                                <div class="justify">
-                                    Attended the free software and Python Workshop in <strong> IIT Madras </strong>
+                                    Attended the free software and Linux Workshop in <strong> NIT, Jsr </strong>
                                   </div>
                             </div><!--//item-->
                         </li>
