--- a/cv/cv.html
+++ b/cv/cv.html
@@ -44,7 +44,7 @@
                 <div class="item">
                     <h4 class="degree">B.Tech in Computer Science</h4>
                     <h5 class="meta">B.A.College of Engineering & Technology College</h5>
-                    <h5 class="meta">6.9 CGPA</h5>
+                    <h5 class="meta">66%</h5>
                     <div class="time">2015 - 2019</div>
                 </div><!--//item-->
                 <div class="item">
@@ -74,8 +74,8 @@
                 <ul class="list-unstyled interests-list">
                     <li>Android development</li>
 					<li>Web development</li>
-					<li>Linux</li>
                     <li>Database Management</li>
+			<li>Linux</li>
                     <li>shell Scripting</li>
                 </ul>
             </div><!--//interests-->
