--- a/cv/cv.html
+++ b/cv/cv.html
@@ -194,7 +194,7 @@
                         <li>
                             <div class="item">
                                 <div class="justify">
-                                    I got the <strong>3rd Prize</strong> in Autonomus Robotic Competition 2017 ,organised by NIT Jamshedpur.
+                                    I got  <strong>3rd Prize</strong> in Autonomus Robotic Competition 2017 ,organised by NIT Jamshedpur.
                                 </div>
                             </div><!--//item-->
                         </li>
@@ -229,7 +229,7 @@
                         <li>
                             <div class="item">
                                 <div class="justify">
-                                    Best<strong>Logo Designer</strong> 
+                                    Best <strong>Logo Designer</strong> 
                                 </div>
                             </div><!--//item-->
                         </li>
@@ -251,6 +251,16 @@
                     </ul>
 
                     <ul>
+                        <li>
+                            <div class="item">
+                                <div class="justify">
+                                    Accomplished <strong> CCNA in Routing & Switching </strong>
+                                  </div>
+                            </div><!--//item-->
+                        </li>
+                    </ul>
+			
+			<ul>
                         <li>
                             <div class="item">
                                 <div class="justify">
